--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  text-shadow: rgba(rgb(26, 1, 1), rgb(2, 32, 2), rgb(36, 36, 39), alpha);
   padding-top: 200px;
   
 }
@@ -65,5 +64,11 @@ body {
   width: 500px;
   margin: 50px;
   opacity: 90%;
+  border-radius: 15%;
 }
 
+.delete-button{
+  border:2px solid white;
+  background: transparent;
+  color: white;
+}
